# sf-kedro

./: .env.example  .gitignore  README.md  debug.py  install.sh  new_notebook.ipynb  project.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
conf/base/catalog/: analyze.yml  backtest.yml  baseline.yml  feature_analysis.yml  grid.yml  ml_validated.yml  nn_validated.yml  production.yml  train.yml  tune.yml  validate.yml
conf/base/flows/: analysis_only.yml  baseline_sma.yml  bollinger_reversion.yml  ema_trend.yml  grid_rsi.yml  grid_sma.yml  macd_crossover.yml  ml_multi_detector.yml  ml_validated_grid.yml  rsi_momentum.yml  scalping_sma.yml
conf/base/parameters/: baseline.yml  common.yml  feature_analysis.yml  grid.yml  ml_validated.yml  nn_validated.yml  pipelines.yml  production.yml
notebooks/: tutorial.ipynb
scripts/: debug.py  run_all_indicators.py  run_indicators_by_category.py  test_single_indicator.py
src/sf_kedro/: __init__.py  __main__.py  settings.py
src/sf_kedro/custom_modules/: __init__.py  classification_metrics.py  distribution_metrics.py  global_features.py  profile_metrics.py  signal_metrics.py  strategy_metrics.py  t.py
src/sf_kedro/general_nodes/: __init__.py  backtest.py  backtest_engine.py  data_loader.py  feature_builder.py  labeling.py  ml_validator_factory.py  signal_metrics.py  signal_processor.py  strategy_metrics.py  validator_factory.py
src/sf_kedro/hooks/: __init__.py  dagshub_hooks.py
src/sf_kedro/modules/: __init__.py  (+4 more)
tests/: test_run.py
(+40 files in other folders)
